left_sidebar: Replace cog icon with plus icon.
We add a popover on click which allows user to create or browse
streams too.

Reason for doing so:

At present, it is hard to discover how to join streams
and create new streams. In particular:

Users have a hard time finding the gear in the STREAMS
header in the left sidebar and realizing that it's relevant for them.
Even once a user is in the STREAMS menu, the Create
stream button is hard to spot.

Fixes #18694.

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -501,7 +501,7 @@ li.expanded_private_message {
 }
 
 #streams_header {
-    margin-right: 0;
+    margin-right: 12px;
     padding-left: $far_left_gutter_size;
     cursor: pointer;
     margin-top: 3px;
